--- a/ChangeLog
+++ b/ChangeLog
@@ -1,24 +1,29 @@
+2010-08-18  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/formats/xyzformat.cpp (OpenBabel): Add parsing of 5th column
+	as partial charge -- supported by Jmol and others.
+
 2010-08-18 Tim Vandermeersch
 
-        * include/openbabel/isomorphism.h, src/isomorphism.cpp: Use VF2 
-        algortihm for finding isomorphisms and set this as default algorithm.
-        The class performes good enough for general purpose now and is 
-        comparable in speed with the current smarts matching algortihm.
+	* include/openbabel/isomorphism.h, src/isomorphism.cpp: Use VF2
+	algortihm for finding isomorphisms and set this as default algorithm.
+	The class performes good enough for general purpose now and is
+	comparable in speed with the current smarts matching algortihm.
 
-        * include/openbabel/query.h, src/query.cpp: Make sure aromaticity is
-        handled correctly.
+	* include/openbabel/query.h, src/query.cpp: Make sure aromaticity is
+	handled correctly.
 
-        * test/automorphismtest.cpp, test/isomorphismtest.cpp: Add some more
-        tests.
+	* test/automorphismtest.cpp, test/isomorphismtest.cpp: Add some more
+	tests.
 
 2010-08-16 Chris Morley
 
 	* include/openbabel/math/vector3.h,src/math/vector3.cpp: add new
 	function, Point2Line()
-	
+
 	* windows-vc2008/Distribution/NSISScriptToCreateInstaller.nsi: mods
-	to make help file local, add java bindings. Version 2.3.0rc	
-	
+	to make help file local, add java bindings. Version 2.3.0rc
+
 	* doc/OpenBabelGUI.html, windows-vc2008/Distribution/ToolsPrograms.txt,
       src/ops/xout.cpp,src/ops/partialcharges.cpp: documentation updates
 
@@ -30,11 +35,11 @@
 	couldn't be used from Python.
 
 2010-08-13 Chris Morley
-	
+
 	* tools/obabel.cpp: by its design obabel cannot use multiple
 	concatenated single-character options. Ensure single ones with
 	an unregistered number of parameters work correctly.
-	
+
 	* src/formats/fastsearchformat.cpp: extra error handling
 
 2010-08-13 Chris Morley
@@ -46,11 +51,11 @@
 2010-08-13 Noel O'Boyle
 
 	* src/mol.cpp: HasHydrogens() never returned True as the flag was
-	being cleared in AddHydrogens(). Reported by Alex Henderson on 
+	being cleared in AddHydrogens(). Reported by Alex Henderson on
 	openbabel-devel. Now fixed.
 
 2010-08-13 Noel O'Boyle
-	
+
 	* src/forcefield.cpp: Fixed a problem with invalid pointers in
 	WeightedRotorSearch that was resulting in weird geometries. I think I
 	introduced this problem back in May. Also noticed that the final
@@ -61,15 +66,15 @@
 
 	* src/ops/opisomorph.cpp: make more robust to errors like a missing
 	file.
-	
+
 	* src/descriptor.cpp: allow descripor parameters to be in quotes.
-	
+
 	* src/formats/mdlformat.cpp: change the new -at option to -aT
 	because	FastSearchFormat already uses -at.
-	
+
 	* src/ops/xout.cpp, src/GUI/OBGUI.cpp: change the name of the op
 	xout to 0xout so that it is executed before other ops.
-	
+
 	* src/GUI/optswx.cpp(SetOptions): ignore entries with both
 	checkbox and editboxes unless checked.
 
@@ -79,6 +84,7 @@
 	deviations from ideal angles. Replaced existing method with one based
 	on the signed distance to the plane through the double bond at right
 	angles to the stereo unit.
+
 	* src/math/vector3.cpp, vector3.h: Move body of Point2Plane into new
 	function Point2PlaneSigned. Point2Plane now just returns
 	fabs(Point2PlaneSigned).
@@ -87,12 +93,12 @@
 
 	* src/formats/gaussformat.cpp:Comment out inconsistent use of
 	OBMol::SetEnergy(double).
-	
+
 	The use of this needs to be agreed.
-	
+
 2010-08-10 Tim Vandermeersch
 
-	* include/openbabel/rotor.h, src/rotor.cpp: Add method to fix bonds 
+	* include/openbabel/rotor.h, src/rotor.cpp: Add method to fix bonds
 	and mark fix atoms as deprecated. Update documentation.
 
 	* include/openbabel/conformersearch.h, src/conformersearch.cpp: Use
@@ -105,7 +111,7 @@
 	* src/builder.cpp, include/openbabel/builder.h: Add a Set/Unset method
 	for keeprings. This allows the user to keep the ring conformation from
 	the input molecule (this only makes sense if it's a 3D structure to
-	begin with). 
+	begin with).
 
 2010-08-09 Chris Morley
 
