FastSearchFormat mods to make deprecated -S option work. Catch error and reduce info in obabel
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3985 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2010-08-18 Chris Morley
+
+	* src/formats/fastsearchformat.cpp: make work with deprecated -S option
+	(-s is now an op and op names are case insensitive).
+    
+	* tools/obabel.cpp: catch error when output specification missing
+	Remove messageSummary, which is really needed only when debugging.
+	Still in babel.
+	 
+    * src/formats/svgformat.cpp: small description change
+
 2010-08-18  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/formats/xyzformat.cpp (OpenBabel): Add parsing of 5th column
