git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3989 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2010-08-19 Chris Morley
 
+	* windows-vc2008/Distribution/NSISScriptToCreateInstaller.nsi:
+	add the forgotten DLLs. Seems ok on XP but uninstall leaves some
+	folders in Windows 7.
+
 2010-08-18 Chris Morley
 
 	* src/formats/fastsearchformat.cpp: make work with deprecated -S option
