--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,10 @@
 
 2010-08-23  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
+	* src/formats/mol2format.cpp: Disable tellg/seekg forwarding,
+	which is very slow with gzip-compressed mol2.gz
+	files. PR#3048758.
+
 	* src/formats/outformat.cpp: Handle new GAMESS-US/WinGAMESS output
 	files.
 
