* src/parsmart.cpp, include/openbabel/parsmart.h: Add thread-safe         SMARTS matching API, PR#3949927, thanks to David Koes.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3999 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,9 @@
 
 2010-08-23  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
+	* src/parsmart.cpp, include/openbabel/parsmart.h: Add thread-safe
+	SMARTS matching API, PR#3949927, thanks to David Koes.
+
 	* src/formats/mol2format.cpp: Disable tellg/seekg forwarding,
 	which is very slow with gzip-compressed mol2.gz
 	files. PR#3048758.
