* src/data.cpp (GetAtomicNum): Handle "Hl" hydrogen label from CIF         PR#3048959. Add warning when an unknown element label is provided.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4003 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,9 @@
 
 2010-08-23  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
+	* src/data.cpp (GetAtomicNum): Handle "Hl" hydrogen label from CIF
+	PR#3048959. Add warning when an unknown element label is provided.
+
 	* src/parsmart.cpp, include/openbabel/parsmart.h: Add thread-safe
 	SMARTS matching API, PR#3949927, thanks to David Koes.
 
