--- a/ChangeLog
+++ b/ChangeLog
@@ -4,35 +4,36 @@
 	functionality for OBOrbitalData -- including convenience functions
 	for loading lists of orbital energies.
 
-	* src/formats/gamessformat.cpp: Use it.
+	* src/formats/gamessformat.cpp: Use it (closed-shell
+	calculations for now).
+
+	* src/formats/gaussformat.cpp: Grab new "z-matrix orientation"
+	coordinates given sometimes by Gaussian 09. Also add some
+	OBOrbitalData support.
 
 2010-08-24 Chris Morley
 
 	* src/format/mdlformat.cpp: add -aP format to read only title
 	and properties only. Speeds up filtering of sdf datasets based on
 	their properties.
-	 
+
 	* src/ops/opisomorph.cpp: "extract" parameter on -s option to
 	retain only matched atoms. Useful for preparing templates for
 	--gen2D
 
-2010-08-24 Chris Morley
-	
 	* src/alias.cpp(FormulaParse): return false when lower case letter
 	encountered. Reduce chance of misinterpretation in this backstop
 	function.
-	
+
 	* src/depict/depict.cpp: output D and T
-	
+
 	* src/formats/gaussformat.cpp: fix bug with diatomics looking for
 	"Rotational Constants" when ther is only one.
-	
+
 	* windows-vc2008/Distribution/NSISScriptToCreateInstaller.nsi:
 	put shortcut to babel guide to http://baoilleach.webfactional.com
-    for the time being
+	for the time being.
 
-
->>>>>>> .r4007
 2010-08-23 Noel O'Boyle
 
 	* src/formats/mdlformat.cpp: Make the "s" option work by resurrecting
