Fix -C option and other minor bugs
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4013 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-08-26 Chris Morley
+
+	* src/depict/depict.cpp(DrawMolecule): fix so works with empty molecules
+	* src/formats/gamessukformat.cpp: fix typo
+	* src/formats/mdlformat.cpp: -as needs OBConversion::INOPTIONS
+	* src/obmolecformat.cpp: make -C option work again
+
 2010-08-24  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* include/openbabel/generic.h, src/generic.cpp: Improve on
