--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-09-10  Noel O'Boyle
+
+	* src/formats/pdbqtformat.cpp: Remove "ent" designation as this is
+	already used by the .pdb file format.
+
 2010-09-09  Noel O'Boyle
 
 	* scripts/python/pybel_py*.x.py: Synch with cinfony. Add support for
