* CMakeLists.txt: As discussed on list, don't build all bindings when 	RUN_SWIG=ON (building some bindings may cause errors). Instead, the 	option ALL_BINDINGS=ON will build all bindings.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4040 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-09-14  Noel O'Boyle
+
+	* CMakeLists.txt: As discussed on list, don't build all bindings when
+	RUN_SWIG=ON (building some bindings may cause errors). Instead, the
+	option ALL_BINDINGS=ON will build all bindings.
+
 2010-09-10  Noel O'Boyle
 
 	* src/formats/pdbqtformat.cpp: Remove "ent" designation as this is
