* src/math/align.cpp, test/aligntest.cpp: Correct dumb error in 	final line of calculation of RMSD.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4053 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-09-17  Noel O'Boyle
+
+	* src/math/align.cpp, test/aligntest.cpp: Correct dumb error in
+	final line of calculation of RMSD.
+
 2010-09-15  Noel O'Boyle
 
 	* src/builder.cpp: When correcting stereo on rings, handle the case of
