* src/math/align.cpp, align.h: Add OBAlign::GetRotMatrix()
* test/aligntest.cpp: Add basic test for GetRotMatrix()

git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4079 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-09-23 Noel O'Boyle
+
+	* src/math/align.cpp, align.h: Add OBAlign::GetRotMatrix()
+
+	* test/aligntest.cpp: Add basic test for GetRotMatrix()
+
 2010-09-23 Chris Morley
 
 	* src/fingerprints/finger2.cpp: generate detailed fragement info
