* src/formats/smilesformat.cpp: Handle cis/trans stereo involving ring closures. Handle errors in specifying cis/trans stereo in general and involving ring closures
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4117 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-09-29 Noel O'Boyle
+
+	* src/formats/smilesformat.cpp: Handle cis/trans stereo involving ring
+	closures. Handle errors in specifying cis/trans stereo in general and
+	involving ring closures.
+
 2010-09-23 Noel O'Boyle
 
 	* src/math/align.cpp, align.h: Add OBAlign::GetRotMatrix()
