--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Open Babel README version 2.3
-----------------
+Open Babel README version 2.3.0
+-------------------------------
 
 Open Babel is a chemical toolbox designed to speak the many languages
 of chemical data. It's an open, collaborative project allowing anyone
@@ -9,6 +9,7 @@ chemistry, solid-state materials, biochemistry, or related areas.
 * Ready-to-use programs, and complete programmer's toolkit
 * Read, write and convert over 90 chemical file formats
 * Filter and search molecular files using SMARTS and other methods
+* Generate 2D and 3D coordinates for SMILES, InChI and other formats
 * Supports molecular modeling, cheminformatics, bioinformatics,
   organic chemistry, inorganic chemistry, solid-state materials,
   nuclear chemistry...
@@ -20,5 +21,5 @@ the Free Software Foundation version 2 of the License. Full details
 can be found in the file "COPYING" which should be included in your
 distribution.
 
-For more information, check the Open Babel website: 
+For more information, check the Open Babel website:
 <http://openbabel.org/>
