Fixed THANKS with 2.3 contributors.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4247 71e0b675-c112-0410-beda-96664073b5c2

--- a/THANKS
+++ b/THANKS
@@ -5,79 +5,100 @@ Open Babel would not be what it is without the help of a cast of
 many. We are fundamentally a community project and aim to offer open
 development, responsive to users and contributors alike.
 
-Rich Apodaca
-Joshua Ballanco
-Michael Banck
-Ross Braithwaite
-Daniil Bratashov
-Francesco Bresciani
-Jean Brefort
-Alex Clark
-Joe Corkery
-Steve Constable
-Donald Curtis
-Andrew Dalke
-Daen de Leon
-Menno Deij
-Christian Ehrlicher
-Nick England
-Vincent Favre-Nicolin
-Maxim Fedorovsky
-Fabien Fontaine
-Malcolm Gillies
-Richard Gillilan
-Brian Goldman
-Rajarshi Guha
-Bob Hanson
-Marcus Hanwell
-Tommi Hassinen
-Bryan Herger
-David Hoekman
-Geoffrey Hutchison
-Benoit Jacob
-Craig James
-Mikael Johansson
-Stefan Kebekus
-Elmar Krieger
-Erik Kruus
-Daniel Leidert
-Christian Laggner
-Greg Landrum
-Eugene Leitl
-Teng Lin
-Zhiguo Liu
-Daniel Mansfield
-David Mathog
-Gerde Menche
-Dominik Mierzejewski
-Chris Morley
-Peter Murray-Rust
-Carsten Niehaus
-Anthony Nicholls
-Noel O'Boyle
-Sergei Patchkovskii
-Steffen Reith
-Louis Richard
-Roger Sayle
-Ernst-Georg Schmid
-Ajay Shah
-Kevin Shepherd
-Sangwoo Shim
-Andrew Smellie
-Matt Sprague
-Matt Stahl
-Chris Swain
-S Joshua Swamidass
-Konstantin Tokarev
-Bob Tolbert
-Sergey Trepalin
-Tim Vandermeersch
-Ugo Varetto
-Martin Vogt
-Fredrik Wallner
-Pat Walters
-Pawel Wolinski
-Joerg Kurt Wegner
+* Seth Alves
+* Rich Apodaca
+* Joshua Ballanco
+* Michael Banck
+* Ross Braithwaite
+* Daniil Bratashov
+* Francesco Bresciani
+* Jean Brefort
+* Jiahao Chen
+* Alex Clark
+* Joe Corkery
+* Steve Constable
+* Donald Curtis
+* Andrew Dalke
+* Daen de Leon
+* Hans De Winter
+* Menno Deij
+* Christian Ehrlicher
+* eMolecules, Inc
+* Nick England
+* Vincent Favre-Nicolin
+* Maxim Fedorovsky
+* Fabien Fontaine
+* Malcolm Gillies
+* Richard Gillilan
+* Brian Goldman
+* Rajarshi Guha
+* Richard Hall
+* Bob Hanson
+* Marcus Hanwell
+* Tommi Hassinen
+* Bryan Herger
+* David Hoekman
+* Geoffrey Hutchison
+* InhibOx, Inc.
+* Benoit Jacob
+* Craig James
+* Mikael Johansson
+* Stefan Kebekus
+* David Koes
+* Elmar Krieger
+* Erik Kruus
+* Daniel Leidert
+* Christian Laggner
+* Greg Landrum
+* Eugene Leitl
+* Teng Lin
+* Zhiguo Liu
+* David Lonie
+* Daniel Mansfield
+* David Mathog
+* Gerde Menche
+* Dominik Mierzejewski
+* Chris Morley
+* Paul Mortenson
+* Peter Murray-Rust
+* Anthony Nicholls
+* Carsten Niehaus
+* Florian Nigsch
+* Noel O'Boyle
+* TJ O'Donnell
+* Sergei Patchkovskii
+* Frank Peters
+* Steffen Reith
+* Louis Richard
+* Philipp Rumpf
+* Roger Sayle
+* Ernst-Georg Schmid
+* Ajay Shah
+* Kevin Shepherd
+* Sangwoo Shim
+* Silicos NV
+* Andrew Smellie
+* Matt Sprague
+* Matt Stahl
+* Chris Swain
+* S Joshua Swamidass
+* Gert Thijs
+* Jens Thomas
+* Konstantin Tokarev
+* Bob Tolbert
+* Paolo Tosco
+* Sergey Trepalin
+* George Tu
+* Tim Vandermeersch
+* Ugo Varetto
+* Wayne Volkmuth
+* Martin Vogt
+* Izhar Wallach
+* Fredrik Wallner
+* Chris Wassman
+* Pat Walters
+* Pawel Wolinski
+* Joerg Kurt Wegner
 
 There are probably many more who have contributed to Babel, OBabel,
 OELib or directly to Open Babel who are not listed here. Please help
