Updated with release notes from 2.3.0
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4248 71e0b675-c112-0410-beda-96664073b5c2

--- a/NEWS
+++ b/NEWS
@@ -1,19 +1,69 @@
 Open Babel 2.3.0 (2010-10-23)
 
+This release represents a major update and should be a stable upgrade,
+strongly recommended for all users of Open Babel. Highlights include a
+completely rewritten stereochemistry engine, Spectrophore fingerprint
+generation, 2D depiction, improved 3D coordinate generation, conformer
+searching, and more. Many formats are improved or added, including
+CIF, PDBQT, SVG, and more. Improved developer API and scripting
+support and many, many bug fixes are also included.
+
 What's New from 2.2.3:
 
-This release represents a major update to Open Babel, adding many new
-features and fixing many long-standing bugs. It is a stable upgrade,
-strongly recommended for all users of Open Babel. Highlights include a
-completely rewritten stereochemistry engine, 2D depiction, improved 3D
-coordinate generation ...
+* Completely rewritten stereochemistry perception, including support
+  for tetrahedral, square planar, and higher-order stereochemistry.
+* Dramatically improved canonicalization algorithm (Note that in general, canonical SMILES have changed since the 2.2.x release.)
+* 2D depiction, including SVG vector graphics generation using code from MCDL.
+* New Spectrophore generation, contributed by Silicos NV.
+* New ChargeMethod API including support for partial charge assignment
+  from Gasteiger, MMFF94, QEq, QTPIE methods and plugin interface for
+  adding more.
+* Improved 3D coordinate generation.
+* New conformer generation framework, including support for diverse
+  conformer generation and genetic algorithm lowest-energy searching.
+* Improved user documentation.
+* Improved aromaticity / Kekule bond assignment.
+* Improved unit test suite using the CMake-based CTest program.
+* Improved support for crystallographic unit cells (e.g., in CIF format).
+* Improved UFF force field method, including hypervalent 5, 6, 7 and higher coordination numbers.
+* Support for the GAFF (Generalized Amber Force Field) method.
+* Support for reading geometry optimizations as multiple conformers
+  from Gaussian, GAMESS-US, and other quantum chemistry packages.
+* Support for reading molecular orbital energies from quantum chemistry formats.
+* Several memory leaks fixed.
+* Fixed many compiler warnings.
+* Fixed support for MinGW and Cygwin environments.
+* Fixed bugs with Gaussian 09 output files.
+* Latest released version of the InChI library (1.0.3) generating standard InChI.
+* Many more bug fixes and small feature improvements.
 
-- New Feature Here
+==New Command-Line Operations==
+
+* --canonical: Output atoms in canonical order for any file format (i.e., not just SMILES)
+* --conformer: Run a conformer search on the input molecules (has many options)
+* --gen2D: Generate a 2D depiction of the molecule
+* --partialcharge <model>: Use the partial charge model supplied to
+  generate charges (i.e., instead of default Gasteiger sigma model)
+* --sort <descriptor>: Sort molecules by a specified descriptor
+* --unique: Only output unique molecules (as determined by InChI generation)
 
 ==New File Formats==
 
 Import & Export:
-- PDBQT, contributed by
+- DL-POLY CONFIG
+- FHIaims XYZ
+- PDBQT
+
+Import only:
+- DL-POLY HISTORY
+- GULP output
+- PWscf output
+- Text
+
+Export only:
+- MNA (Multilevel Neighborhoods of Atoms)
+- SVG vector graphics
+
 
 Open Babel 2.2.3 (2009-07-31)
 
