Fixed space group 104.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4257 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-10-24  Jean Brefort  <jean.brefort@normalesup.org>
+
+	* data/space-groups.txt: fixed space group 104 (missing transfoms).
+
 2010-10-14 Jiahao Chen <jiahao@mit.edu>
 
 	* src/charges/qeq.cpp,src/charges/qtpie.cpp: Added documentation.
