* scripts/CMakeLists.txt: added dependency 'openbabel' to target '_openbabel' (Python bindings)
On non-Windows platfroms Python module is linked by custom script
which is not aware of target dependencies. This change fixes parallel
build

git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4285 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2010-10-29  Konstantin Tokarev <annulen@yandex.ru>
+
+	* scripts/CMakeLists.txt: added dependency 'openbabel' to target
+	'_openbabel' (Python bindings)
+	
+	On non-Windows platfroms Python module is linked by custom script
+	which is not aware of target dependencies. This change fixes parallel
+	build
+
 2010-10-24  Jean Brefort  <jean.brefort@normalesup.org>
 
 	* data/space-groups.txt: fixed space group 104 (missing transfoms).
