* scripts/CMakeLists.txt: fixed behavior of build system if some of JNI dependencies were not found
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@4286 71e0b675-c112-0410-beda-96664073b5c2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2010-10-29  Konstantin Tokarev <annulen@yandex.ru>
 
+	* scripts/CMakeLists.txt: fixed behavior of build system if some of
+	JNI dependencies were not found
+
+2010-10-29  Konstantin Tokarev <annulen@yandex.ru>
+
 	* scripts/CMakeLists.txt: added dependency 'openbabel' to target
 	'_openbabel' (Python bindings)
 	
