--- a/doc/obprobe.1
+++ b/doc/obprobe.1
@@ -33,8 +33,8 @@ MMFF94 partial charge
 .Sh EXAMPLES
 .Pp
 Probe the file pyridines.sdf using a carbonyl oxygen -- a hydrogen
-bond acceptor with partial charge -0.57:
-.Dl "obprobe 7 -0.57 pyridines.sdf"
+bond acceptor with partial charge \-0.57:
+.Dl "obprobe 7 \-0.57 pyridines.sdf"
 .Pp
 Probe the file pyridines.sdf using a phenyl carbon atom -- a
 hydrophobic atom with no partial charge:
