--- a/doc/babel.1
+++ b/doc/babel.1
@@ -2,7 +2,7 @@
 .Os "Open Babel" 2.2
 .Dt babel 1 URM
 .Sh NAME
-.Nm babel
+.Nm babel, obabel
 .Nd "a converter for chemistry and molecular modeling data files"
 .Sh SYNOPSIS
 .Nm
@@ -13,10 +13,32 @@
 .Ar infile
 .Op Fl o Ar output-type
 .Ar outfile
+.Pp
+.Nm obabel
+.Op Fl H Ar help-options
+.Nm obabel
+.Op Ar OPTIONS
+.Op Fl i Ar input-type | Fl : Qo Ar SMILES-string Qc
+.Ar infile
+.Op Fl o Ar output-type
+.Fl O Ar outfile
 .Sh DESCRIPTION
-Babel is a cross-platform program designed to interconvert
+.Nm
+is a cross-platform program designed to interconvert
 between many file formats used in molecular modeling and computational
 chemistry and related areas.
+.Pp
+.Nm obabel
+and
+.Nm
+are slightly different. The first is closer to the normal Unix convention
+for commandline programs and more flexible when the user needs to specify
+parameter values on options. With
+.Nm babel
+this only works when the option is the last on the line; with
+.Nm obabel
+no such restriction applies. It further has a shortcut for entering SMILES
+strings, which can be used in place of an input file.
 .Pp
 Open Babel is also a complete programmers toolkit for developing 
 chemistry software. For more information, se the Open Babel web pages
@@ -25,6 +47,10 @@ chemistry software. For more information, se the Open Babel web pages
 If only input and ouput files are given, Open Babel will guess the
 file type from the filename extension.
 .Bl -tag -width flag
+.It Fl : Qo Ar SMILES-string Qc
+Enter SMILES string and use it in place of an input file. The SMILES string
+should be enclosed in quotation marks. More than one can be used, and a molecule
+title can be included if enclosed in quotes.
 .It Fl a Ar options
 Format-specific input options. See 
 .Fl H Ar format-ID 
@@ -84,6 +110,10 @@ specified output format
 For multiple entry input, stop import with molecule # as the last entry
 .It Fl o Ar format-ID
 Specifies output format, see below for the available formats 
+.It Fl O Ar outfile
+Specify the output file. This option applies to
+.Nm obabel
+only.
 .It Fl p
 Add Hydrogens appropriate for pH (use transforms in phmodel.txt)
 .It Fl -property 
